asset/css/dashboard-ui.css
body {
  width: 100%;
  height: 100%;
  /* overflow: hidden; */
  position: relative;
  color: #333333;
  padding: 3px;
}

.wrapper {
  height: 1920px;
  margin: 0 auto; /* Mengatur posisi halaman di tengah */
  background-color: #f5f8f8;
  padding: 20px; /* Jarak dari tepi halaman */
  box-sizing: border-box; /* Penyesuaian untuk padding */
}

.table-dashboard {
  border-collapse: collapse !important;
  width: 100% !important;
}
.table-dashboard > thead > tr > th {
  background-color: #f2f2f2 !important;
  padding: 8px !important;
  text-align: left !important;
}
.table-dashboard > thead > tr > th:first-child {
  padding-left: 12px !important;
  border-top-left-radius: 10px !important;
  border-bottom-left-radius: 10px !important;
}

.table-dashboard > tbody > tr > td:first-child {
  padding-left: 14px !important;
}
.table-dashboard > thead > tr > th:last-child {
  padding-right: 12px !important;
  border-top-right-radius: 10px !important;
  border-bottom-right-radius: 10px !important;
}

.table-dashboard > tbody > tr > td:last-child {
  padding-right: 14px !important;
}

.table-dashboard > thead > tr > td,
th {
  padding: 10px !important;
}

.table-dashboard > thead > tr > th {
  border-bottom: 0px solid #ddd !important;
}

.table-dashboard > tbody > tr > td {
  border-top: 0px solid #ddd !important;
  border-bottom: 1px solid #ddd !important;
  padding: 10px !important ;
  vertical-align: top !important;
}

.table-scrolling {
  width: 100%;
  border-collapse: collapse;
}

.table-scrolling > thead {
  display: table !important;
  width: 100% !important;
  table-layout: fixed !important;
}

.table-scrolling > tbody {
  display: block !important;
  max-height: 292px !important;
  min-height: 292px !important;
  overflow-y: auto !important;
  width: 100% !important;
  table-layout: fixed !important;
}

.table-scrolling > thead > tr > th,
.table-scrolling > thead > tr > td {
  padding: 8px !important;
  box-sizing: border-box !important;
}

.table-scrolling > thead > tr > th {
  background: #f2f2f2 !important;
}

.table-scrolling > thead > tr > td {
  background: #fff !important;
}

/* CARD ACCORDION  */
.icon-toggle {
  cursor: pointer;
}

.arrow {
  display: inline-block;
  width: 8px;
  height: 8px;
  border: solid #9f9f9f;
  border-width: 0 2px 2px 0;
  transform: rotate(45deg);
  margin-right: 5px;
}

.open .arrow {
  transform: rotate(-135deg);
}

.card-content {
  padding: 10px;
  display: none;
}

/* Image Round row */
.image-round-row img {
  border-radius: 50%; /* Membuat gambar menjadi bulat */
  margin: 0 -7px; /* Memberi jarak antar gambar */
  border: 2px solid #e4e3e3; /* Memberi border putih */
  background-color: #cfcfcf;
}

.image-container {
  display: flex;
  align-items: center;
  position: relative;
}

.image-round {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-size: cover;
  background-position: center;
  border: 2px solid #e4e3e3;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  margin: 0 -7px;
  background-color: #cfcfcf;
}

.more-images {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: #ede7ff;
  border: 2px solid #fff;
  color: #7954e9;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 14px;
  font-weight: bold;
  cursor: pointer;
  position: relative;
}

.tooltip-image {
  display: none;
  position: absolute;
  top: -36px;
  left: 26px;
  background-color: white;
  padding: 4px 15px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.more-images:hover .tooltip-image {
  display: flex;
}

.tooltip-image .image {
  width: 40px;
  height: 40px;
}

/* MODAL  */
.modal-content {
  border-radius: 25px;
  padding: 30px;
}

.modal-body {
  padding: 5px;
}

.modal-header {
  min-height: 16.43px;
  padding: 15px;
  background: linear-gradient(
    121.82deg,
    #6349cb 10.01%,
    #9664d6 59.65%,
    #9230c9 101.94%
  );
  border-radius: 12px;
  color: #fff;
}

label.control-label.pt-md {
  text-align: left;
  padding: 10px;
  color: #7b7b7b;
}

.form-control {
  display: block;
  width: 100%;
  height: 45px;
  padding: 6px 14px;
  font-size: 14px;
  line-height: 1.42857143;
  color: #555;
  background-color: #f5f5f5;
  background-image: none;
  border: 1px solid #f5f5f5;
  border-radius: 10px;
  -webkit-box-shadow: unset;
  box-shadow: unset;
  -webkit-transition: border-color ease-in-out 0.15s,
    -webkit-box-shadow ease-in-out 0.15s;
  -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
}

.search-form-default {
  padding: 12px 14px;
}

.form-search {
  width: 100%;
  border: 1px solid;
  border-color: #e7e7e7;
  border-radius: 20px !important;
  padding: 5px 10px 5px 10px;
}
.sasi-btn-search {
  background-color: #8023b4;
  color: #fff;
  border-radius: 48px !important;
}

.search-form-default {
  padding: 12px 14px;
  background-color: #fff;
}

input.form-control.sasi-form {
  margin: 0px;
  background-color: #fff;
  height: 33px;
  padding: 0px 0px 0px 6px;
  border: #fff;
}

button#filter-sasi {
  border-radius: 25px !important;
  padding: 12px 20px 12px 20px;
  border-color: #e7e7e7;
  color: #777777;
  margin-top: 0%;
  margin-left: 10% !important;
}

.dropdown-menu {
  min-width: 175px;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  display: none;
  float: left;
  list-style: none;
  text-shadow: none;
  padding: 10px;
  background-color: #ffffff;
  margin: 10px 0px 0px 0px;
  box-shadow: 5px 5px rgba(102, 102, 102, 0.1);
  border: 1px solid #eee;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
}

.dropdown-menu.dropdown-radiobuttons {
  border-radius: 12px !important;
  box-shadow: 0px 4px 17px -7px;
}

.dropdown-radiobuttons label,
.dropdown-checkboxes label {
  display: block;
  font-weight: 300;
  color: #333;
  margin-bottom: 4px;
  margin-top: 4px;
}

.panel-footer {
  padding: 10px 15px;
  background-color: #fff;
  border-top: 1px solid #ddd;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.table-length,
select.form-control.input-sm {
  background-color: #f2f3f5;
  border: unset;
  box-shadow: unset;
  border-radius: 5px;
}

select.input-sm {
  height: 28px;
  line-height: 28px;
  padding: 2px 10px;
}

.table-length.width-fit {
  width: max-content;
}

.pagination {
  display: inline-block;
  padding-left: 0;
  margin: 20px 0;
  border-radius: 4px;
}

.pagination > li > a,
.pagination > li > span {
  position: relative;
  float: left;
  padding: 6px 12px;
  line-height: 1.42857143;
  color: #000000;
  text-decoration: none;
  background-color: #fff;
  border: unset;
  margin: 4px;
}

.nav-tabs > li.active > a,
span.badge.badge-success,
.loading-message > .block-spinner-bar > div,
#dash_pagination li.disabled > a,
.ver-inline-menu li.active a {
  background: #8023b4;
  color: #fff;
  border-radius: 9px;
}

.bootstrap-select > .btn {
  width: 100%;
  padding-right: 25px;
  background-color: #009ef7;
  color: #fff;
}

span.filter-option.pull-left {
  width: 100%;
  background-color: #009ef7;
  color: #fff;
  width: 100%;
  overflow: hidden;
}
.btn-group.bootstrap-select.show-tick.form-control.bs-select {
  background-color: #009ef7;
  width: 100%;
}

.btn-group.bootstrap-select.show-tick.form-control.bs-select {
  background-color: #009ef7;
  width: 100%;
  display: flex;
  align-items: center;
  gap: 15px;
}

/* SCROLL BAR */
/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #9b79ff;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #7954e9;
}

